k8s/demo/price-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: price-api
  namespace: vinyl-demo
  labels:
    app: price-api
spec:
  type: ClusterIP
  selector:
    app: price-api
  ports:
    - name: http
      port: 8801
      targetPort: http
